updating glyphicol icons

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
       </li>
       <li>
         <a href="https://ijsv-backend.herokuapp.com/api/temas"
-          ><span class="glyphicon glyphicon-user"></span> Temas</a
+          ><span class="glyphicon glyphicon-th-list"></span> Temas</a
         >
       </li>
       <li>
